# voice-changer

./: .gitignore  .gitmodules  Blackpink dice ai. cover  Checklist.md  Colab_RealtimeVoiceChanger.ipynb  Hina_Mod_Kaggle_Real_Time_Voice_Changer.ipynb  Hina_Modified_Realtime_Voice_Changer_on_Colab.ipynb  Kaggle_RealtimeVoiceChanger.ipynb  LICENSE  LICENSE-CLA  LICENSE-NOTICE  MMVCTrainerFrontendDemo.ipynb  README.md  README_dev_en.md  README_dev_ja.md  README_dev_ko.md  README_dev_ru.md  README_en.md  README_ko.md  README_ru.md  Realtime_Voice_Changer_on_Colab.ipynb  SOFT_VC_FAST_API.ipynb  SOFT_VC_FLASK.ipynb  SoftVcDemo.ipynb  VoiceChangerDemo.ipynb  VoiceChangerDemo_Simple.ipynb  VoiceRecorder.ipynb  Wwww  docker-compose.yml  package-lock.json  package.json  start.sh  start2.sh  startVoiceChanger.sh  startVoiceChangerWithoutGPU.sh  start_docker.sh  start_v0.1.sh  template.sh  w_okada's_Voice_Changer_version_2_x.ipynb
server/: .env  .python-version  Exceptions.py  GetModelInfo.py  MMVCServerSIO-cpu.spec  MMVCServerSIO-cuda.spec  MMVCServerSIO.py  MMVCServerSIO.spec  ModelSample.py  README.md  app.py  client.py  const.py  fillSlot.sh  initialize.sh  main.py  merged.pth  pyproject.toml  requirements-common.txt  requirements-cpu.txt  requirements-cuda-cu118.txt  requirements-cuda.txt  requirements-dml.txt  requirements-rocm.txt  requirements.txt  requirements_cpuonly.txt  requirements_nvidia.txt  samples.json  samples_0001.json  samples_0002.json  samples_0003_d2.json  samples_0003_o.json  samples_0003_t.json  server.py  settings.py  start_http.bat  start_https.bat
(+1342 files in other folders)
