[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["wok <wok@local.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.11"
uvicorn = "0.21.1"
pyOpenSSL ="23.1.1"
numpy = "1.23.5"
resampy = "0.4.2"
python-socketio = "5.8.0"
fastapi = "0.95.1"
python-multipart = "0.0.6"
onnxruntime-gpu = "1.13.1"
scipy = "1.10.1"
matplotlib = "3.7.1"
websockets = "11.0.2"
faiss-cpu = "1.7.3"
torchcrepe = "0.0.18"
librosa = "0.9.1"
gin = "0.1.6"
gin_config = "0.5.0"
einops = "0.6.0"
local_attention = "1.8.5"
sounddevice = "0.4.6"
dataclasses_json = "0.5.7"
onnxsim = "0.4.28"
torchfcpe = "0.0.3"
torchaudio = "2.3.1"
torch = "2.3.1"
fairseq = "0.12.2"
pyworld = "0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main2 = "MMVCServerSIO:main"
test = "test.test:test"